--- a/ses_03/sesion_03_original.ipynb
+++ b/ses_03/sesion_03_original.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python para economistas\n",
+    "\n",
+    "### Mtro. Diego López Tamayo\n",
+    "#### El Colegio de México\n",
+    "#### BBVA Research"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2364,7 +2375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
