--- a/ses_02/sesion_02_original.ipynb
+++ b/ses_02/sesion_02_original.ipynb
@@ -870,6 +870,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ae0562f",
+   "metadata": {},
+   "source": [
+    "# Hasta aquí llegamos en la 2da Sesión, veremos el resto muy breve al inicio de la 3ra."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "28b6d7bd",
@@ -880,6 +888,8 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "materias = [\"Historia\", \"Geografía\", \"Matemáticas\", \"Economía\"]"
    ]
   },
