--- a/ses_02/sesion_02_tips_jupyter.ipynb
+++ b/ses_02/sesion_02_tips_jupyter.ipynb
@@ -74,7 +74,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cortamos esta celda"
+    "# Cortamos, copiamos y pegamos esta celda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "739d7915",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge de celdas con \"shift + M\"\n",
+    "# Separar casillas: Nos paramos al final de la línea a partir de la cuál separar. \"ctrl + alt + shift\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14b3a4b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5f9aac7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge 2"
    ]
   },
   {
@@ -84,21 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combine 1\n",
-    "\n",
-    "# Combine 2\n",
-    "\n",
-    "# Combine 3 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b21d9276",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Separar casillas: Nos paramos al final de la línea a partir de la cuál separar. \"ctrl + alt + shift\""
+    "# Merge 3 "
    ]
   },
   {
@@ -108,7 +125,7 @@
    "source": [
     "Find and Replace: \"F\"  \n",
     "\n",
-    "Reemplazamos Combine con Combine"
+    "Reemplazamos Merge con Combine"
    ]
   },
   {
