--- a/ses_03/sesion_02_final.ipynb
+++ b/ses_03/sesion_02_final.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "48d5bbf6",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "materias = [\"Historia\", \"Geografía\", \"Matemáticas\", \"Economía\"]"
@@ -12,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "54aa18f1",
    "metadata": {},
    "outputs": [
@@ -22,7 +26,7 @@
        "['Historia', 'Geografía', 'Matemáticas']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,9 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1c176c0a",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -49,7 +57,7 @@
        "['Historia', 'Geografía', 'Matemáticas']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "50565732",
    "metadata": {},
    "outputs": [
@@ -73,7 +81,7 @@
        "'Economía'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,29 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "750bab73",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Ordenar nuestras listas\n",
     "# Métodos modifican el objeto original\n",
     "\n",
     "materias = [\"Historia\", \"Geografía\", \"Matemáticas\", \"Economía\"]\n",
-    "calif = [10,6,7,5]\n",
-    "\n",
-    "len(materias) == len(calif)"
+    "calif = [10,6,7,5]"
    ]
   },
   {
@@ -119,7 +118,7 @@
     {
      "data": {
       "text/plain": [
-       "['Economía', 'Geografía', 'Historia', 'Matemáticas']"
+       "[5, 6, 7, 10]"
       ]
      },
      "execution_count": 8,
@@ -129,28 +128,9 @@
    ],
    "source": [
     "materias.sort()\n",
-    "materias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a6a58d05",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 6, 7, 10]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "calif.sort()\n",
+    "\n",
+    "materias\n",
     "calif"
    ]
   },
@@ -180,7 +160,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7b87a37e",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -202,7 +186,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "7a0e7024",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -224,7 +212,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "885aa08f",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -246,7 +238,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "1ff500ab",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -270,7 +266,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "cb24277d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "?materias"
@@ -279,7 +279,11 @@
   {
    "cell_type": "markdown",
    "id": "6b071e98",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Trabajando con diccionarios\n",
     "\n",
@@ -305,7 +309,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "50db8bcc",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -355,7 +363,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "8094d58a",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -399,9 +411,14 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "b27a37bd",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
+    "# Agregar directamente un nuevo key-value\n",
     "estudiante['teléfono'] = '55 5555 55555'"
    ]
   },
@@ -431,7 +448,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "4f9af0ef",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -452,7 +473,7 @@
     "# Actualizar un diccionario, utilizo otro diccionario\n",
     "\n",
     "estudiante.update({'nombre' : 'Angie',\n",
-    "                  'apellido' : 'Fael',})\n",
+    "                  'apellido' : 'Pérez',})\n",
     "\n",
     "estudiante"
    ]
@@ -485,40 +506,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "aab285ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edad = estudiante.pop('edad')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "9317ce2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edad"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3b884e0e",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Clases en Python\n",
     "\n",
@@ -543,20 +537,28 @@
   {
    "cell_type": "markdown",
    "id": "cace3c1f",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Las Clases en Python son un bloque fundamental de la construcción de programas en Python.  \n",
     "\n",
     "Permiten agrupar lógicamente nuestros datos y funciones para reutilizarlas posteriormente y construir sobre estas clases.  \n",
     "\n",
-    "No serán utilizadas frecuentemente "
+    "No serán utilizadas frecuentemente en este curso"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
    "id": "e4fed4d8",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Automatizar ciertos procesos\n",
@@ -685,7 +687,11 @@
   {
    "cell_type": "markdown",
    "id": "51c7ee96",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Introducción a Numpy y la estructura Dataframe"
    ]
@@ -707,19 +713,27 @@
   {
    "cell_type": "markdown",
    "id": "3848a24d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "### Numerical Python (Numpy)\n",
     "\n",
     "Una de las librerías más utilizadas para manejo de datos.\n",
     "\n",
-    "Más rápido que utilizar listas con muchos métodos."
+    "Más rápido que utilizar listas y cuenta con muchos métodos."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2c9e0626",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "La unidad básica es un **numpy array**:  \n",
     "\n",
@@ -752,7 +766,11 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "abd4b4be",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Array (es un tipo de lista, iterable y permite operaciones vectoriales)\n",
@@ -788,7 +806,11 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "b3cd5a13",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -832,7 +854,11 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "51266237",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -851,16 +877,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "960cf2b6",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2]\n",
-      " [3 4]]\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-0a5f27dc0cba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Para matrices defino dos listas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mA\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -906,6 +939,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
